--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.4",
     "express": "^4.15.3",
     "file-loader": "^0.11.2",
     "react": "^15.6.1",
@@ -29,8 +30,12 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^4.8.2",
     "resolve-url-loader": "^2.1.0",
-    "scss-loader": "^0.0.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack": "^3.1.0",
     "webpack-dev-server": "^2.5.1"
+  },
+  "devDependencies": {
+    "node-sass": "^4.5.3"
   }
 }
