--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.7.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^4.8.2"
+  },
+  "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -21,21 +30,12 @@
     "css-loader": "^0.28.4",
     "express": "^4.15.3",
     "file-loader": "^0.11.2",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "node-sass": "^4.5.3",
     "react-hot-loader": "next",
-    "react-redux": "^5.0.5",
-    "react-router-dom": "^4.1.1",
-    "redux": "^3.7.1",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^4.8.2",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.1.0",
     "webpack-dev-server": "^2.5.1"
-  },
-  "devDependencies": {
-    "node-sass": "^4.5.3"
   }
 }
