--- a/package.json
+++ b/package.json
@@ -1,51 +1,51 @@
 {
-  "name": "helpsomeone",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server",
-    "prod": "webpack --config webpack.config.prod.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-redux": "^5.0.5",
-    "react-router-dom": "^4.1.1",
-    "redux": "^3.7.1",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^4.8.2"
-  },
-  "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.28.4",
-    "eslint": "3.19.0",
-    "eslint-config-airbnb": "^15.0.2",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "^7.1.0",
-    "express": "^4.15.3",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.2",
-    "node-sass": "^4.5.3",
-    "react-hot-loader": "next",
-    "resolve-url-loader": "^2.1.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "stylelint": "^7.12.0",
-    "stylelint-config-standard": "^16.0.0",
-    "webpack": "^3.1.0",
-    "webpack-dev-server": "^2.5.1"
-  }
+	"name": "react-startkit",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "webpack-dev-server",
+		"prod": "webpack --config webpack.config.prod.js"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"react": "^16.0.0",
+		"react-dom": "^16.0.0",
+		"react-redux": "^5.0.6",
+		"react-router-dom": "^4.2.2",
+		"redux": "^3.7.2",
+		"redux-logger": "^3.0.6",
+		"redux-persist": "^5.2.0"
+	},
+	"devDependencies": {
+		"babel-core": "^6.26.0",
+		"babel-eslint": "^8.0.1",
+		"babel-loader": "^7.1.2",
+		"babel-plugin-transform-class-properties": "^6.24.1",
+		"babel-plugin-transform-flow-strip-types": "^6.22.0",
+		"babel-polyfill": "^6.26.0",
+		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-react": "^6.24.1",
+		"babel-preset-stage-0": "^6.24.1",
+		"css-loader": "^0.28.7",
+		"eslint": "^4.10.0",
+		"eslint-config-airbnb": "^16.1.0",
+		"eslint-plugin-import": "^2.8.0",
+		"eslint-plugin-jsx-a11y": "^6.0.2",
+		"eslint-plugin-react": "^7.4.0",
+		"express": "^4.16.2",
+		"extract-text-webpack-plugin": "^3.0.2",
+		"file-loader": "^1.1.5",
+		"node-sass": "^4.5.3",
+		"react-hot-loader": "^3.1.1",
+		"resolve-url-loader": "^2.2.0",
+		"sass-loader": "^6.0.6",
+		"style-loader": "^0.19.0",
+		"stylelint": "^8.2.0",
+		"stylelint-config-standard": "^17.0.0",
+		"webpack": "^3.8.1",
+		"webpack-dev-server": "^2.9.3"
+	}
 }
