--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"prod": "webpack --config webpack.config.prod.js"
 	},
 	"author": "",
-	"license": "ISC",
+	"license": "MIT",
 	"dependencies": {
 		"react": "^16.0.0",
 		"react-dom": "^16.0.0",
