--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
 	"presets": ["es2015", "stage-0", "react"],
-	"plugins": ["transform-class-properties", "transform-flow-strip-types", "react-hot-loader/babel"]
+	"plugins": ["react-hot-loader/babel"]
 }
