--- a/package.json
+++ b/package.json
@@ -4,40 +4,40 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest",
 		"dev": "webpack-dev-server",
 		"prod": "webpack --config webpack.config.prod.js"
 	},
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
-		"react": "^16.0.0",
-		"react-dom": "^16.0.0",
+		"react": "^16.2.0",
+		"react-dom": "^16.2.0",
 		"react-redux": "^5.0.6",
 		"react-router-dom": "^4.2.2",
 		"redux": "^3.7.2",
 		"redux-logger": "^3.0.6",
-		"redux-persist": "^5.2.0"
+		"redux-persist": "^5.5.0"
 	},
 	"devDependencies": {
+		"autoprefixer": "^7.2.5",
 		"babel-core": "^6.26.0",
 		"babel-eslint": "^8.0.1",
 		"babel-loader": "^7.1.2",
-		"babel-plugin-transform-class-properties": "^6.24.1",
-		"babel-plugin-transform-flow-strip-types": "^6.22.0",
 		"babel-polyfill": "^6.26.0",
 		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-0": "^6.24.1",
+		"clean-webpack-plugin": "^0.1.17",
 		"css-loader": "^0.28.7",
 		"eslint": "^4.10.0",
 		"eslint-config-airbnb": "^16.1.0",
 		"eslint-plugin-import": "^2.8.0",
 		"eslint-plugin-jsx-a11y": "^6.0.2",
 		"eslint-plugin-react": "^7.4.0",
-		"express": "^4.16.2",
 		"extract-text-webpack-plugin": "^3.0.2",
 		"file-loader": "^1.1.5",
+		"jest": "^22.1.4",
 		"node-sass": "^4.5.3",
 		"react-hot-loader": "^3.1.1",
 		"resolve-url-loader": "^2.2.0",
@@ -46,6 +46,7 @@
 		"stylelint": "^8.2.0",
 		"stylelint-config-standard": "^17.0.0",
 		"webpack": "^3.8.1",
+		"webpack-bundle-analyzer": "^2.9.2",
 		"webpack-dev-server": "^2.9.3"
 	}
 }
