--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
+		"babel-polyfill": "^6.26.0",
+		"isomorphic-fetch": "^2.2.1",
 		"react": "^16.2.0",
 		"react-dom": "^16.2.0",
 		"react-redux": "^5.0.6",
@@ -24,7 +26,6 @@
 		"babel-core": "^6.26.0",
 		"babel-eslint": "^8.0.1",
 		"babel-loader": "^7.1.2",
-		"babel-polyfill": "^6.26.0",
 		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-0": "^6.24.1",
