--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"dev": "webpack-dev-server --inline --progress --config build/webpack.config.js",
+		"start": "npm run dev",
 		"test": "jest",
-		"dev": "webpack-dev-server",
-		"prod": "webpack --config webpack.config.prod.js"
+		"prod": "node build/build.js"
 	},
 	"author": "",
 	"license": "MIT",
@@ -29,7 +30,8 @@
 		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-0": "^6.24.1",
-		"clean-webpack-plugin": "^0.1.17",
+		"chalk": "^2.3.0",
+		"copy-webpack-plugin": "^4.3.1",
 		"css-loader": "^0.28.7",
 		"eslint": "^4.10.0",
 		"eslint-config-airbnb": "^16.1.0",
@@ -37,17 +39,20 @@
 		"eslint-plugin-jsx-a11y": "^6.0.2",
 		"eslint-plugin-react": "^7.4.0",
 		"extract-text-webpack-plugin": "^3.0.2",
-		"file-loader": "^1.1.5",
 		"jest": "^22.1.4",
 		"node-sass": "^4.5.3",
+		"ora": "^1.3.0",
 		"react-hot-loader": "^3.1.1",
 		"resolve-url-loader": "^2.2.0",
+		"rimraf": "^2.6.2",
 		"sass-loader": "^6.0.6",
 		"style-loader": "^0.19.0",
 		"stylelint": "^8.2.0",
 		"stylelint-config-standard": "^17.0.0",
+		"url-loader": "^0.6.2",
 		"webpack": "^3.8.1",
 		"webpack-bundle-analyzer": "^2.9.2",
-		"webpack-dev-server": "^2.9.3"
+		"webpack-dev-server": "^2.9.3",
+		"webpack-merge": "^4.1.1"
 	}
 }
