--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"babel-core": "^6.26.0",
 		"babel-eslint": "^8.0.1",
 		"babel-loader": "^7.1.2",
-		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-env": "^1.6.1",
 		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-0": "^6.24.1",
 		"chalk": "^2.3.0",
@@ -39,10 +39,11 @@
 		"eslint-plugin-jsx-a11y": "^6.0.2",
 		"eslint-plugin-react": "^7.4.0",
 		"extract-text-webpack-plugin": "^3.0.2",
+		"file-loader": "^1.1.6",
 		"jest": "^22.1.4",
 		"node-sass": "^4.5.3",
 		"ora": "^1.3.0",
-		"react-hot-loader": "^3.1.1",
+		"react-hot-loader": "^3.1.3",
 		"resolve-url-loader": "^2.2.0",
 		"rimraf": "^2.6.2",
 		"sass-loader": "^6.0.6",
