--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "webpack-dev-server --inline --progress --config build/webpack.config.js",
+		"dev": "webpack-dev-server --inline --progress --config build/webpack.dev.config.js",
 		"start": "npm run dev",
 		"test": "jest",
 		"prod": "node build/build.js"
@@ -43,6 +43,7 @@
 		"jest": "^22.1.4",
 		"node-sass": "^4.5.3",
 		"ora": "^1.3.0",
+		"postcss-loader": "^2.0.10",
 		"react-hot-loader": "^3.1.3",
 		"resolve-url-loader": "^2.2.0",
 		"rimraf": "^2.6.2",
