--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"eslint-plugin-react": "^7.4.0",
 		"extract-text-webpack-plugin": "^3.0.2",
 		"file-loader": "^1.1.6",
+		"html-webpack-plugin": "^2.30.1",
 		"jest": "^22.1.4",
 		"node-sass": "^4.5.3",
 		"ora": "^1.3.0",
