--- a/package.json
+++ b/package.json
@@ -40,10 +40,14 @@
 		"eslint-plugin-react": "^7.4.0",
 		"extract-text-webpack-plugin": "^3.0.2",
 		"file-loader": "^1.1.6",
+		"friendly-errors-webpack-plugin": "^1.6.1",
 		"html-webpack-plugin": "^2.30.1",
 		"jest": "^22.1.4",
+		"node-notifier": "^5.2.1",
 		"node-sass": "^4.5.3",
+		"optimize-css-assets-webpack-plugin": "^3.2.0",
 		"ora": "^1.3.0",
+		"portfinder": "^1.0.13",
 		"postcss-loader": "^2.0.10",
 		"react-hot-loader": "^3.1.3",
 		"resolve-url-loader": "^2.2.0",
