--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
 		"ora": "^1.3.0",
 		"portfinder": "^1.0.13",
 		"postcss-loader": "^2.0.10",
-		"react-hot-loader": "^3.1.3",
+		"react-hot-loader": "^4.0.0-beta.18",
 		"resolve-url-loader": "^2.2.0",
 		"rimraf": "^2.6.2",
 		"sass-loader": "^6.0.6",
