--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "webpack-dev-server --inline --progress --config build/webpack.dev.config.js",
-		"start": "npm run dev",
-		"test": "jest",
-		"prod": "node build/build.js"
+		"build": "node build/build.js",
+		"test": "jest"
 	},
 	"author": "",
 	"license": "MIT",
@@ -16,50 +15,49 @@
 		"isomorphic-fetch": "^2.2.1",
 		"react": "^16.2.0",
 		"react-dom": "^16.2.0",
-		"react-redux": "^5.0.6",
+		"react-loadable": "^5.3.1",
+		"react-redux": "^5.0.7",
 		"react-router-dom": "^4.2.2",
 		"redux": "^3.7.2",
-		"redux-logger": "^3.0.6",
-		"redux-persist": "^5.5.0"
+		"redux-persist": "^5.9.1"
 	},
 	"devDependencies": {
-		"autoprefixer": "^7.2.5",
+		"autoprefixer": "^8.1.0",
 		"babel-core": "^6.26.0",
-		"babel-eslint": "^8.2.1",
-		"babel-loader": "^7.1.2",
+		"babel-eslint": "^8.2.2",
+		"babel-loader": "^7.1.4",
+		"babel-plugin-syntax-dynamic-import": "^6.18.0",
 		"babel-preset-env": "^1.6.1",
 		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-0": "^6.24.1",
-		"chalk": "^2.3.0",
-		"copy-webpack-plugin": "^4.3.1",
-		"css-loader": "^0.28.9",
-		"eslint": "^4.16.0",
+		"chalk": "^2.3.2",
+		"copy-webpack-plugin": "^4.5.1",
+		"css-loader": "^0.28.10",
+		"eslint": "^4.18.2",
 		"eslint-config-airbnb": "^16.1.0",
-		"eslint-plugin-import": "^2.8.0",
+		"eslint-plugin-import": "^2.9.0",
 		"eslint-plugin-jsx-a11y": "^6.0.3",
-		"eslint-plugin-react": "^7.6.0",
-		"extract-text-webpack-plugin": "^3.0.2",
-		"file-loader": "^1.1.6",
+		"eslint-plugin-react": "^7.7.0",
 		"friendly-errors-webpack-plugin": "^1.6.1",
-		"html-webpack-plugin": "^2.30.1",
-		"jest": "^22.1.4",
+		"html-webpack-plugin": "^3.0.6",
+		"jest": "^22.4.2",
 		"node-notifier": "^5.2.1",
 		"node-sass": "^4.7.2",
-		"optimize-css-assets-webpack-plugin": "^3.2.0",
-		"ora": "^1.3.0",
+		"ora": "^2.0.0",
 		"portfinder": "^1.0.13",
-		"postcss-loader": "^2.0.10",
-		"react-hot-loader": "^4.0.0-beta.18",
-		"resolve-url-loader": "^2.2.1",
+		"postcss-loader": "^2.1.1",
+		"react-hot-loader": "^4.0.0",
+		"redux-logger": "^3.0.6",
 		"rimraf": "^2.6.2",
-		"sass-loader": "^6.0.6",
-		"style-loader": "^0.19.1",
-		"stylelint": "^8.4.0",
-		"stylelint-config-standard": "^18.0.0",
-		"url-loader": "^0.6.2",
-		"webpack": "^3.10.0",
-		"webpack-bundle-analyzer": "^2.9.2",
-		"webpack-dev-server": "^2.11.1",
-		"webpack-merge": "^4.1.1"
+		"sass-loader": "^6.0.7",
+		"style-loader": "^0.20.3",
+		"stylelint": "^9.1.1",
+		"stylelint-config-standard": "^18.2.0",
+		"url-loader": "^1.0.1",
+		"webpack": "^4.1.1",
+		"webpack-bundle-analyzer": "^2.11.1",
+		"webpack-cli": "^2.0.11",
+		"webpack-dev-server": "^3.1.0",
+		"webpack-merge": "^4.1.2"
 	}
 }
