--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"start": "node server.js",
 		"dev": "webpack-dev-server --inline --progress --config build/webpack.dev.config.js",
 		"build": "node build/build.js",
 		"test": "jest"
@@ -38,10 +39,12 @@
 		"eslint-plugin-import": "^2.9.0",
 		"eslint-plugin-jsx-a11y": "^6.0.3",
 		"eslint-plugin-react": "^7.7.0",
+		"express": "^4.16.3",
 		"file-loader": "^1.1.11",
 		"friendly-errors-webpack-plugin": "^1.6.1",
 		"html-webpack-plugin": "^3.0.6",
 		"jest": "^22.4.2",
+		"mini-css-extract-plugin": "^0.2.0",
 		"node-notifier": "^5.2.1",
 		"node-sass": "^4.8.1",
 		"ora": "^2.0.0",
