--- a/package.json
+++ b/package.json
@@ -7,23 +7,33 @@
 		"start": "node server.js",
 		"dev": "webpack-dev-server --inline --progress --config build/webpack.dev.config.js",
 		"build": "node build/build.js",
-		"test": "jest"
+		"test": "jest",
+		"fake": "json-server --watch db.json"
 	},
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
+		"axios": "^0.18.0",
 		"babel-polyfill": "^6.26.0",
-		"isomorphic-fetch": "^2.2.1",
-		"react": "^16.2.0",
-		"react-dom": "^16.2.0",
+		"i18next": "^10.6.0",
+		"i18next-browser-languagedetector": "^2.1.1",
+		"i18next-xhr-backend": "^1.5.1",
+		"lodash": "^4.17.5",
+		"normalizr": "^3.2.4",
+		"prop-types": "^15.6.1",
+		"react": "^16.3.0",
+		"react-dom": "^16.3.0",
+		"react-i18next": "^7.5.1",
 		"react-loadable": "^5.3.1",
 		"react-redux": "^5.0.7",
 		"react-router-dom": "^4.2.2",
 		"redux": "^3.7.2",
-		"redux-persist": "^5.9.1"
+		"redux-actions": "^2.3.0",
+		"redux-persist": "^5.9.1",
+		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
-		"autoprefixer": "^8.1.0",
+		"autoprefixer": "^8.2.0",
 		"babel-core": "^6.26.0",
 		"babel-eslint": "^8.2.2",
 		"babel-loader": "^7.1.4",
@@ -33,8 +43,8 @@
 		"babel-preset-stage-0": "^6.24.1",
 		"chalk": "^2.3.2",
 		"copy-webpack-plugin": "^4.5.1",
-		"css-loader": "^0.28.10",
-		"eslint": "^4.18.2",
+		"css-loader": "^0.28.11",
+		"eslint": "^4.19.1",
 		"eslint-config-airbnb": "^16.1.0",
 		"eslint-plugin-import": "^2.9.0",
 		"eslint-plugin-jsx-a11y": "^6.0.3",
@@ -42,25 +52,25 @@
 		"express": "^4.16.3",
 		"file-loader": "^1.1.11",
 		"friendly-errors-webpack-plugin": "^1.6.1",
-		"html-webpack-plugin": "^3.0.6",
-		"jest": "^22.4.2",
-		"mini-css-extract-plugin": "^0.2.0",
+		"html-webpack-plugin": "^3.1.0",
+		"jest": "^22.4.3",
+		"mini-css-extract-plugin": "^0.4.0",
 		"node-notifier": "^5.2.1",
-		"node-sass": "^4.8.1",
+		"node-sass": "^4.8.3",
 		"ora": "^2.0.0",
 		"portfinder": "^1.0.13",
-		"postcss-loader": "^2.1.1",
+		"postcss-loader": "^2.1.3",
 		"react-hot-loader": "^4.0.0",
 		"redux-logger": "^3.0.6",
 		"rimraf": "^2.6.2",
 		"sass-loader": "^6.0.7",
 		"style-loader": "^0.20.3",
-		"stylelint": "^9.1.1",
+		"stylelint": "^9.1.3",
 		"stylelint-config-standard": "^18.2.0",
 		"url-loader": "^1.0.1",
-		"webpack": "^4.1.1",
+		"webpack": "^4.4.1",
 		"webpack-bundle-analyzer": "^2.11.1",
-		"webpack-cli": "^2.0.11",
+		"webpack-cli": "^2.0.13",
 		"webpack-dev-server": "^3.1.1",
 		"webpack-merge": "^4.1.2"
 	}
