upgrade project dependencies and fixed some webpack bugs

--- a/package.json
+++ b/package.json
@@ -4,20 +4,33 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "node server.js",
 		"dev": "webpack-dev-server --inline --progress --config build/webpack.dev.config.js",
-		"build": "node build/build.js",
+		"build": "rm -rf dist && node build/build.js",
 		"test": "jest",
-		"fake": "json-server --watch db.json"
+		"git-cli": "git-flow-cli"
 	},
-	"author": "",
+	"jest": {
+		"rootDir": "src",
+		"moduleNameMapper": {
+			"@/(.*)$": "<rootDir>/$1"
+		},
+		"testResultsProcessor": "jest-junit"
+	},
+	"jest-junit": {
+		"output": "jenkinsJunitResult/result.xml"
+	},
+	"author": "JerryP <egroup.jerrylee@gmail.com>",
 	"license": "MIT",
 	"dependencies": {
+		"@e-group/frontend-utils": "^1.0.13",
+		"@e-group/react-component-kit": "^1.1.11",
 		"axios": "^0.18.0",
 		"babel-polyfill": "^6.26.0",
-		"i18next": "^10.6.0",
+		"history": "^4.7.2",
+		"i18next": "^11.3.2",
 		"i18next-browser-languagedetector": "^2.1.1",
 		"i18next-xhr-backend": "^1.5.1",
+		"immutable": "^3.8.2",
 		"lodash": "^4.17.5",
 		"normalizr": "^3.2.4",
 		"prop-types": "^15.6.1",
@@ -27,13 +40,22 @@
 		"react-loadable": "^5.3.1",
 		"react-redux": "^5.0.7",
 		"react-router-dom": "^4.2.2",
-		"redux": "^3.7.2",
+		"react-router-redux": "^5.0.0-alpha.9",
+		"redux": "^4.0.0",
 		"redux-actions": "^2.3.0",
+		"redux-immutable": "^4.0.0",
+		"redux-observable": "^1.0.0-beta.1",
 		"redux-persist": "^5.9.1",
-		"redux-thunk": "^2.2.0"
+		"reselect": "^3.0.1",
+		"rxjs": "^6.2.1",
+		"semantic-ui-css": "^2.3.1",
+		"semantic-ui-react": "^0.81.1",
+		"styled-components": "^3.3.2"
 	},
 	"devDependencies": {
+		"@e-group/git-flow-cli": "^2.0.2",
 		"autoprefixer": "^8.2.0",
+		"axios-mock-adapter": "^1.15.0",
 		"babel-core": "^6.26.0",
 		"babel-eslint": "^8.2.2",
 		"babel-loader": "^7.1.4",
@@ -47,13 +69,15 @@
 		"eslint": "^4.19.1",
 		"eslint-config-airbnb": "^16.1.0",
 		"eslint-plugin-import": "^2.9.0",
+		"eslint-plugin-jest": "^21.17.0",
 		"eslint-plugin-jsx-a11y": "^6.0.3",
 		"eslint-plugin-react": "^7.7.0",
-		"express": "^4.16.3",
 		"file-loader": "^1.1.11",
 		"friendly-errors-webpack-plugin": "^1.6.1",
 		"html-webpack-plugin": "^3.1.0",
-		"jest": "^22.4.3",
+		"image-webpack-loader": "^4.3.1",
+		"jest": "^23.1.0",
+		"jest-junit": "^5.0.0",
 		"mini-css-extract-plugin": "^0.4.0",
 		"node-notifier": "^5.2.1",
 		"node-sass": "^4.8.3",
@@ -63,14 +87,14 @@
 		"react-hot-loader": "^4.0.0",
 		"redux-logger": "^3.0.6",
 		"rimraf": "^2.6.2",
-		"sass-loader": "^6.0.7",
-		"style-loader": "^0.20.3",
+		"sass-loader": "^7.0.3",
+		"style-loader": "^0.21.0",
 		"stylelint": "^9.1.3",
 		"stylelint-config-standard": "^18.2.0",
 		"url-loader": "^1.0.1",
 		"webpack": "^4.4.1",
 		"webpack-bundle-analyzer": "^2.11.1",
-		"webpack-cli": "^2.0.13",
+		"webpack-cli": "^3.0.4",
 		"webpack-dev-server": "^3.1.1",
 		"webpack-merge": "^4.1.2"
 	}
