--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,6 @@
     // This must be specified if "paths" is set
     "baseUrl": ".",
     // Relative to "baseUrl"
-    "paths": { "*": ["./src/*"] }
+    "paths": { "@/*": ["./src/*"] }
   }
 }
