--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
 		"moduleNameMapper": {
 			"@/(.*)$": "<rootDir>/$1"
 		},
-		"testResultsProcessor": "jest-junit"
+		"reporters": [
+			"default",
+			"jest-junit"
+		]
 	},
 	"jest-junit": {
 		"output": "jenkinsJunitResult/result.xml"
@@ -30,12 +33,12 @@
 		"i18next": "^11.3.2",
 		"i18next-browser-languagedetector": "^2.1.1",
 		"i18next-xhr-backend": "^1.5.1",
-		"immutable": "^3.8.2",
+		"immutable": "^4.0.0-rc.9",
 		"lodash": "^4.17.5",
 		"normalizr": "^3.2.4",
 		"prop-types": "^15.6.1",
-		"react": "^16.3.0",
-		"react-dom": "^16.3.0",
+		"react": "^16.4.1",
+		"react-dom": "^16.4.1",
 		"react-i18next": "^7.5.1",
 		"react-loadable": "^5.3.1",
 		"react-redux": "^5.0.7",
@@ -68,6 +71,7 @@
 		"css-loader": "^0.28.11",
 		"eslint": "^4.19.1",
 		"eslint-config-airbnb": "^16.1.0",
+		"eslint-import-resolver-webpack": "^0.10.0",
 		"eslint-plugin-import": "^2.9.0",
 		"eslint-plugin-jest": "^21.17.0",
 		"eslint-plugin-jsx-a11y": "^6.0.3",
@@ -84,8 +88,9 @@
 		"ora": "^2.0.0",
 		"portfinder": "^1.0.13",
 		"postcss-loader": "^2.1.3",
-		"react-hot-loader": "^4.0.0",
+		"react-hot-loader": "^4.3.2",
 		"redux-logger": "^3.0.6",
+		"redux-mock-store": "^1.5.3",
 		"rimraf": "^2.6.2",
 		"sass-loader": "^7.0.3",
 		"style-loader": "^0.21.0",
@@ -94,8 +99,8 @@
 		"url-loader": "^1.0.1",
 		"webpack": "^4.4.1",
 		"webpack-bundle-analyzer": "^2.11.1",
-		"webpack-cli": "^3.0.4",
+		"webpack-cli": "^3.0.6",
 		"webpack-dev-server": "^3.1.1",
-		"webpack-merge": "^4.1.2"
+		"webpack-merge": "^4.1.3"
 	}
 }
