--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"lodash": "^4.17.5",
 		"normalizr": "^3.2.4",
 		"prop-types": "^15.6.1",
+		"query-string": "^6.1.0",
 		"react": "^16.4.1",
 		"react-dom": "^16.4.1",
 		"react-i18next": "^7.5.1",
