--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
 		"axios": "^0.18.0",
 		"babel-polyfill": "^6.26.0",
 		"history": "^4.7.2",
-		"i18next": "^11.3.2",
+		"i18next": "^11.3.3",
 		"i18next-browser-languagedetector": "^2.1.1",
 		"i18next-xhr-backend": "^1.5.1",
 		"immutable": "^4.0.0-rc.9",
 		"lodash": "^4.17.5",
 		"normalizr": "^3.2.4",
-		"prop-types": "^15.6.1",
+		"prop-types": "^15.6.2",
 		"query-string": "^6.1.0",
 		"react": "^16.4.1",
 		"react-dom": "^16.4.1",
@@ -48,22 +48,23 @@
 		"redux": "^4.0.0",
 		"redux-actions": "^2.3.0",
 		"redux-immutable": "^4.0.0",
-		"redux-observable": "^1.0.0-beta.1",
+		"redux-observable": "^1.0.0",
 		"redux-persist": "^5.9.1",
 		"reselect": "^3.0.1",
 		"rxjs": "^6.2.1",
 		"semantic-ui-css": "^2.3.1",
 		"semantic-ui-react": "^0.81.1",
-		"styled-components": "^3.3.2"
+		"styled-components": "^3.3.3"
 	},
 	"devDependencies": {
 		"@e-group/git-flow-cli": "^2.0.2",
-		"autoprefixer": "^8.2.0",
+		"autoprefixer": "^8.6.3",
 		"axios-mock-adapter": "^1.15.0",
 		"babel-core": "^6.26.0",
-		"babel-eslint": "^8.2.2",
+		"babel-eslint": "^8.2.5",
 		"babel-loader": "^7.1.4",
 		"babel-plugin-syntax-dynamic-import": "^6.18.0",
+		"babel-plugin-transform-decorators-legacy": "^1.3.5",
 		"babel-preset-env": "^1.6.1",
 		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-0": "^6.24.1",
@@ -71,36 +72,36 @@
 		"copy-webpack-plugin": "^4.5.1",
 		"css-loader": "^0.28.11",
 		"eslint": "^4.19.1",
-		"eslint-config-airbnb": "^16.1.0",
-		"eslint-import-resolver-webpack": "^0.10.0",
-		"eslint-plugin-import": "^2.9.0",
+		"eslint-config-airbnb": "^17.0.0",
+		"eslint-import-resolver-webpack": "^0.10.1",
+		"eslint-plugin-import": "^2.13.0",
 		"eslint-plugin-jest": "^21.17.0",
 		"eslint-plugin-jsx-a11y": "^6.0.3",
-		"eslint-plugin-react": "^7.7.0",
+		"eslint-plugin-react": "^7.10.0",
 		"file-loader": "^1.1.11",
 		"friendly-errors-webpack-plugin": "^1.6.1",
 		"html-webpack-plugin": "^3.1.0",
 		"image-webpack-loader": "^4.3.1",
 		"jest": "^23.1.0",
-		"jest-junit": "^5.0.0",
+		"jest-junit": "^5.1.0",
 		"mini-css-extract-plugin": "^0.4.0",
 		"node-notifier": "^5.2.1",
 		"node-sass": "^4.8.3",
 		"ora": "^2.0.0",
 		"portfinder": "^1.0.13",
 		"postcss-loader": "^2.1.3",
-		"react-hot-loader": "^4.3.2",
+		"react-hot-loader": "^4.3.3",
 		"redux-logger": "^3.0.6",
 		"redux-mock-store": "^1.5.3",
 		"rimraf": "^2.6.2",
 		"sass-loader": "^7.0.3",
 		"style-loader": "^0.21.0",
-		"stylelint": "^9.1.3",
+		"stylelint": "^9.3.0",
 		"stylelint-config-standard": "^18.2.0",
 		"url-loader": "^1.0.1",
-		"webpack": "^4.4.1",
+		"webpack": "^4.12.1",
 		"webpack-bundle-analyzer": "^2.11.1",
-		"webpack-cli": "^3.0.6",
+		"webpack-cli": "^3.0.8",
 		"webpack-dev-server": "^3.1.1",
 		"webpack-merge": "^4.1.3"
 	}
