--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,10 @@
 {
-	"presets": ["env", "stage-0", "react"],
-	"plugins": ["react-hot-loader/babel", "syntax-dynamic-import", "transform-decorators-legacy"]
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": [
+		"react-hot-loader/babel",
+		["@babel/plugin-proposal-decorators", { "legacy": true }],
+		"@babel/plugin-syntax-dynamic-import", 
+		"@babel/plugin-proposal-class-properties",
+		"@babel/plugin-proposal-export-default-from"
+  ]
 }
