--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
 	"author": "JerryP <egroup.jerrylee@gmail.com>",
 	"license": "MIT",
 	"dependencies": {
+		"@babel/polyfill": "^7.0.0-beta.51",
 		"@e-group/frontend-utils": "^1.0.13",
 		"@e-group/react-component-kit": "^1.1.11",
 		"axios": "^0.18.0",
-		"babel-polyfill": "^6.26.0",
 		"history": "^4.7.2",
 		"i18next": "^11.3.3",
 		"i18next-browser-languagedetector": "^2.1.1",
@@ -44,17 +44,18 @@
 		"styled-components": "^3.3.3"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.0.0-beta.51",
+		"@babel/plugin-proposal-class-properties": "^7.0.0-beta.51",
+		"@babel/plugin-proposal-decorators": "^7.0.0-beta.51",
+		"@babel/plugin-proposal-export-default-from": "^7.0.0-beta.51",
+		"@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.51",
+		"@babel/preset-env": "^7.0.0-beta.51",
+		"@babel/preset-react": "^7.0.0-beta.51",
 		"@e-group/git-flow-cli": "^2.0.2",
 		"autoprefixer": "^8.6.3",
 		"axios-mock-adapter": "^1.15.0",
-		"babel-core": "^6.26.0",
 		"babel-eslint": "^8.2.5",
-		"babel-loader": "^7.1.4",
-		"babel-plugin-syntax-dynamic-import": "^6.18.0",
-		"babel-plugin-transform-decorators-legacy": "^1.3.5",
-		"babel-preset-env": "^1.6.1",
-		"babel-preset-react": "^6.24.1",
-		"babel-preset-stage-0": "^6.24.1",
+		"babel-loader": "^8.0.0-beta",
 		"chalk": "^2.3.2",
 		"copy-webpack-plugin": "^4.5.1",
 		"css-loader": "^0.28.11",
