--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,4 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "plugins": [
-		"react-hot-loader/babel",
-		["@babel/plugin-proposal-decorators", { "legacy": true }],
-		"@babel/plugin-syntax-dynamic-import", 
-		"@babel/plugin-proposal-class-properties",
-		"@babel/plugin-proposal-export-default-from"
-  ]
+  "presets": ["@babel/preset-env", ["@babel/preset-stage-0", { "decoratorsLegacy": true }], "@babel/preset-react"],
+  "plugins": ["react-hot-loader/babel"]
 }
