--- a/package.json
+++ b/package.json
@@ -45,12 +45,9 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.0.0-beta.51",
-		"@babel/plugin-proposal-class-properties": "^7.0.0-beta.51",
-		"@babel/plugin-proposal-decorators": "^7.0.0-beta.51",
-		"@babel/plugin-proposal-export-default-from": "^7.0.0-beta.51",
-		"@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.51",
 		"@babel/preset-env": "^7.0.0-beta.51",
 		"@babel/preset-react": "^7.0.0-beta.51",
+		"@babel/preset-stage-0": "^7.0.0-beta.51",
 		"@e-group/git-flow-cli": "^2.0.2",
 		"autoprefixer": "^8.6.3",
 		"axios-mock-adapter": "^1.15.0",
