--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
 		"@e-group/git-flow-cli": "^2.0.2",
 		"autoprefixer": "^8.6.3",
 		"axios-mock-adapter": "^1.15.0",
+		"babel-core": "^7.0.0-0",
 		"babel-eslint": "^8.2.5",
+		"babel-jest": "^23.2.0",
 		"babel-loader": "^8.0.0-beta",
 		"chalk": "^2.3.2",
 		"copy-webpack-plugin": "^4.5.1",
@@ -78,6 +80,7 @@
 		"react-hot-loader": "^4.3.3",
 		"redux-logger": "^3.0.6",
 		"redux-mock-store": "^1.5.3",
+		"regenerator-runtime": "^0.12.0",
 		"rimraf": "^2.6.2",
 		"sass-loader": "^7.0.3",
 		"style-loader": "^0.21.0",
