--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"reselect": "^3.0.1",
 		"rxjs": "^6.2.1",
 		"semantic-ui-css": "^2.3.1",
-		"semantic-ui-react": "^0.81.1",
+		"semantic-ui-react": "^0.81.3",
 		"styled-components": "^3.3.3"
 	},
 	"devDependencies": {
@@ -51,10 +51,10 @@
 		"@e-group/git-flow-cli": "^2.0.2",
 		"autoprefixer": "^8.6.3",
 		"axios-mock-adapter": "^1.15.0",
-		"babel-core": "^7.0.0-0",
+		"babel-core": "^7.0.0-bridge.0",
 		"babel-eslint": "^8.2.5",
 		"babel-jest": "^23.2.0",
-		"babel-loader": "^8.0.0-beta",
+		"babel-loader": "^8.0.0-beta.4",
 		"chalk": "^2.3.2",
 		"copy-webpack-plugin": "^4.5.1",
 		"css-loader": "^0.28.11",
@@ -71,7 +71,7 @@
 		"image-webpack-loader": "^4.3.1",
 		"jest": "^23.1.0",
 		"jest-junit": "^5.1.0",
-		"mini-css-extract-plugin": "^0.4.0",
+		"mini-css-extract-plugin": "^0.4.1",
 		"node-notifier": "^5.2.1",
 		"node-sass": "^4.8.3",
 		"ora": "^2.0.0",
@@ -87,7 +87,7 @@
 		"stylelint": "^9.3.0",
 		"stylelint-config-standard": "^18.2.0",
 		"url-loader": "^1.0.1",
-		"webpack": "^4.12.1",
+		"webpack": "^4.14.0",
 		"webpack-bundle-analyzer": "^2.11.1",
 		"webpack-cli": "^3.0.8",
 		"webpack-dev-server": "^3.1.1",
