--- a/package.json
+++ b/package.json
@@ -13,42 +13,15 @@
 	"license": "MIT",
 	"dependencies": {
 		"@babel/polyfill": "^7.0.0-beta.51",
-		"@e-group/frontend-utils": "^1.0.13",
-		"@e-group/react-component-kit": "^1.1.11",
-		"axios": "^0.18.0",
-		"history": "^4.7.2",
-		"i18next": "^11.3.3",
-		"i18next-browser-languagedetector": "^2.1.1",
-		"i18next-xhr-backend": "^1.5.1",
-		"immutable": "^4.0.0-rc.9",
-		"lodash": "^4.17.5",
-		"normalizr": "^3.2.4",
 		"prop-types": "^15.6.2",
-		"query-string": "^6.1.0",
 		"react": "^16.4.1",
-		"react-dom": "^16.4.1",
-		"react-i18next": "^7.5.1",
-		"react-loadable": "^5.3.1",
-		"react-redux": "^5.0.7",
-		"react-router-dom": "^4.2.2",
-		"react-router-redux": "^5.0.0-alpha.9",
-		"redux": "^4.0.0",
-		"redux-actions": "^2.3.0",
-		"redux-immutable": "^4.0.0",
-		"redux-observable": "^1.0.0",
-		"redux-persist": "^5.9.1",
-		"reselect": "^3.0.1",
-		"rxjs": "^6.2.1",
-		"semantic-ui-css": "^2.3.1",
-		"semantic-ui-react": "^0.81.3",
-		"styled-components": "^3.3.3"
+		"react-dom": "^16.4.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.0.0-beta.51",
 		"@babel/preset-env": "^7.0.0-beta.51",
 		"@babel/preset-react": "^7.0.0-beta.51",
 		"@babel/preset-stage-0": "^7.0.0-beta.51",
-		"@e-group/git-flow-cli": "^2.0.2",
 		"autoprefixer": "^8.6.3",
 		"axios-mock-adapter": "^1.15.0",
 		"babel-core": "^7.0.0-bridge.0",
@@ -78,7 +51,6 @@
 		"portfinder": "^1.0.13",
 		"postcss-loader": "^2.1.3",
 		"react-hot-loader": "^4.3.3",
-		"redux-logger": "^3.0.6",
 		"redux-mock-store": "^1.5.3",
 		"regenerator-runtime": "^0.12.0",
 		"rimraf": "^2.6.2",
