--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "webpack-dev-server --inline --progress --config build/webpack.dev.config.js",
-		"build": "rm -rf dist && node build/build.js",
-		"test": "rm -rf jenkinsJunitResult && jest",
-		"git-cli": "git-flow-cli"
+		"build": "node build/build.js",
+		"test": "jest"
 	},
 	"author": "JerryP <egroup.jerrylee@gmail.com>",
 	"license": "MIT",
